--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 Django==4.2.3
 django-postman==4.3.2
 git-filter-repo==2.38.0
+gunicorn==21.2.0
+packaging==23.1
 Pillow==10.0.0
 psycopg2-binary==2.9.6
 python-decouple==3.8
