--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==4.2.3
+django-environ==0.10.0
 django-postman==4.3.2
+env==0.1.0
 git-filter-repo==2.38.0
 gunicorn==21.2.0
 packaging==23.1
@@ -12,4 +15,3 @@ sqlparse==0.4.4
 typing_extensions==4.7.1
 vie==0.0.2
 whitenoise==6.5.0
-
